# COPT-MCP

./: .env  README.md  api_doc.py  config.json  main.py  pyproject.toml  server.py
docs/: README_EN.md  detail_install.md  update_info.md
international/: README_EN.md
international/docs/: detail_install_EN.md  update_info_EN.md
resource/api_doc/Python/: TODO.md  raw_data.json
resource/citation/: bibtex.txt  word.txt
resource/example/LP/: Python.md
resource/example/MIP/: Python.md
resource/example/NLP/: Python.md
resource/example/SOCP/: Python.md
utils/: embedding.py  env.py
