[project]
name = "copt-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coptpy>=7.2.9",
    "fastmcp>=2.10.6",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "sqlite-vec>=0.1.6",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
