[project]
name = "copt-mcp"
version = "0.3.2"
description = "COPT的MCP服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "requests>=2.32.4",
    "sqlite-vec>=0.1.6",
    "tqdm>=4.67.1",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
